 - FFmpeg: Fix some small memory leaks
 - FFmpeg: Fix encoding of time base
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
 - Qt: Fix a race condition in the frame inspector
 - Qt: Load/save bytes from memory viewer in the order visible (fixes mgba.io/i/1900)
 - SM83: Simplify register pair access on big endian
 - SM83: Disassemble STOP as one byte
Misc:
 - 3DS: Use "wide mode" where applicable for slightly better filtering
 - Core: Add savedataUpdated callback
 - Core: Add shutdown callback
 - GB: Allow pausing event loop while CPU is blocked
 - GB: Add support for sleep and shutdown callbacks
 - GBA: Allow pausing event loop while CPU is blocked
 - GBA BIOS: Division by zero should emit a FATAL error
 - GBA Video: Convert OpenGL VRAM texture to integer
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - mGUI: Show battery percentage
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Qt: Memory viewer now supports editing decimal values directly (closes mgba.io/i/1705)
 - Qt: Add copy button to GB printer dialog
 - Qt: Window title updates can be disabled (closes mgba.io/i/1912)
 - Util: Reset vector size on deinit
 - VFS: Change semantics of VFile.sync on mapped files (fixes mgba.io/i/1730)

0.8.4: (2020-10-29)
Emulation fixes:
 - GB Audio: Fix initial sweep state
 - GB Audio: Fix deserializing audio channels 2 and 3
 - GB Audio: Fix deserializing while audio was disabled (fixes mgba.io/i/1305)
 - GB Video: Fix drawing background when window is force-disabled by frontend
 - GB, GBA Video: Copy disable flags when drawing scanlines in proxy when not blocking
 - GBA Audio: Fix deserializing SOUNDCNT_L
 - GBA Audio: Fix stereo in XQ audio
 - GBA Audio: Fix volume/mute in XQ audio (fixes mgba.io/i/1864)